[gd_scene load_steps=8 format=3 uid="uid://lkbtkxwtrig5"]

[ext_resource type="Script" path="res://Objects/UI/Elements/option_checkbox.gd" id="1_lgpyr"]
[ext_resource type="Texture2D" uid="uid://dcyqx136k3a5o" path="res://Graphics/UI/Arrows/ChoiceSelection.tres" id="2_8votq"]
[ext_resource type="FontFile" path="res://Fonts/DialogueFont.tres" id="3_8los3"]
[ext_resource type="Texture2D" uid="uid://bcm8hagac420t" path="res://Graphics/UI/Arrows/Selectable.png" id="3_gjr5t"]
[ext_resource type="PackedScene" uid="uid://cw61ts131kv7y" path="res://Objects/UI/Elements/NewCheckBox.tscn" id="4_e5t7p"]
[ext_resource type="Theme" uid="uid://d1itxkmg7h4un" path="res://default_theme.tres" id="5_wbser"]

[sub_resource type="LabelSettings" id="LabelSettings_jtfwf"]
resource_local_to_scene = true
font = ExtResource("3_8los3")
outline_size = 4
outline_color = Color(0, 0, 0, 1)

[node name="option_checkbox" type="HBoxContainer"]
offset_right = 479.0
offset_bottom = 20.0
script = ExtResource("1_lgpyr")
property = "master_volume"

[node name="Arrow" type="TextureRect" parent="."]
visible = false
layout_mode = 2
texture = ExtResource("2_8votq")
stretch_mode = 5

[node name="FArrow" type="TextureRect" parent="."]
layout_mode = 2
texture = ExtResource("3_gjr5t")
stretch_mode = 5

[node name="Label" type="Label" parent="."]
layout_mode = 2
text = "Label:"
label_settings = SubResource("LabelSettings_jtfwf")

[node name="CheckBox" parent="." instance=ExtResource("4_e5t7p")]
layout_mode = 2
theme = ExtResource("5_wbser")

[connection signal="focus_entered" from="CheckBox" to="." method="_on_check_box_focus_entered"]
[connection signal="focus_exited" from="CheckBox" to="." method="_on_check_box_focus_exited"]
[connection signal="toggled" from="CheckBox" to="." method="_on_check_box_toggled"]
